<resources>
    <string name="app_name">Real Estate Manager</string>


    <string-array name="choice_money">
        <item>Euro</item>
        <item>Dollar</item>
    </string-array>

    <string name="dollar">Dollar</string>
    <string name="euro">Euro</string>

    <string-array name="choice_statut">
        <item>à vendre</item>
        <item>à louer</item>
        <item>vendu</item>
    </string-array>

    <string name="sell">à vendre</string>
    <string name="rent">à louer</string>
    <string name="sold">vendu</string>

    <string-array name="choice_type">
        <item>Maison</item>
        <item>Appartement</item>
        <item>Immeuble</item>
        <item>Studio</item>
        <item>Villa</item>
        <item>Autre</item>
    </string-array>


    <string name="house">Maison</string>
    <string name="apartment">Appartement</string>
    <string name="building">Immeuble</string>
    <string name="studio">Studio</string>
    <string name="villa">Villa</string>
    <string name="other">Autre</string>

    <!-- Main Activity-->

    <string name="location_internet">Le chargement de la localisation peut prendre plus ou moins de temps en fonction de votre connexion internet.</string>
    <string name="map_internet">Besoin d\'une connexion internet pour afficher la carte.</string>


    <string name="location_permission">La localisation des biens est disponible.</string>
    <string name="location_permission_granted">La permission pour la localisation à été obtenue.</string>
    <string name="location_permission_denied">La permission pour la localisation à été refusée.</string>
    <string name="location_permission_required">Pour voir les biens proche de vous la permission pour la localisation est nécessaire.</string>
    <string name="location_permission_request">La localisation n\'est pas disponible. Autorisez-vous d\'être localisé ?</string>


    <string name="convert_money">La monnaie à bien été converti</string>

    <!-- Camera Activity -->

    <string name="no_image_picked">Vous n\'avez pas sélectionné d\'images.</string>
    <string name="add_description_image">Ajouter une description à la photo !</string>


    <!-- Research Fragment -->

    <string name="pourcentage">%%</string>
    <string name="minimum">0</string>
    <string name="maximum">99999999</string>
    <string name="date_default">01/01/0000</string>

    <string name="research">Rechercher des biens !</string>
    <string name="complete">Veuillez remplir correctement le champs</string>


    <!-- Add Fragment -->

    <string name="add_title">Ajouter un bien !</string>

    <string name="date_default2">02/01/0000</string>

    <string name="delete_image">Supprimer les photos</string>
    <string name="modify">Modifier le bien</string>

    <string name="error_photo">Veuillez ajouter au moins une photo</string>
    <string name="error_date">Veuillez renseignez la date de vente quand le bien est vendu</string>
    <string name="error_date2">Il y a une date alors le bien n\'est pas en vente</string>
    <string name="add_photo">Ajouter une photo</string>
    <string name="nb_photo">Nombre de photo ajouté : </string>

    <string name="add_property">Ajouter le bien</string>

    <string name="success_add">Le bien à bien été ajouté</string>
    <string name="asuccess_modify">Le bien à bien été modifié</string>


    <!-- Map Fragment -->

    <string name="here">Ici</string>

    <!-- activity camera -->


    <string name="choose_picture">Choisir une photo !</string>
    <string name="take_picture">Prendre une photo !</string>
    <string name="description">Description</string>
    <string name="this_photo">Choisir cette photo !</string>
    <string name="cancel">Annuler </string>

    <!-- activity add -->

    <string name="a_price">Prix</string>
    <string name="a_surface">Surface</string>
    <string name="a_room">nb piece</string>
    <string name="a_ville">Ville</string>
    <string name="a_bath">nb SDB</string>
    <string name="a_bed">nb chambres</string>
    <string name="a_location">Adresse </string>
    <string name="a_proximity">A proximité de \n (séparé par \',\' si plusieurs) </string>
    <string name="a_date">Selection de la date de vente (si \'vendu\')</string>
    <string name="a_agent">Agent immobilier</string>
    <string name="a_photo">Ajouter une photo</string>
    <string name="a_nb_photo">Nombre de photo ajouté : 0</string>
    <string name="a_youtube">Lien video format : https://www.youtube.com/watch?v= (facultatif | séparé par \',\' si plusieurs)</string>
    <string name="a_description">Description </string>
    <string name="a_add_">Ajouter le bien</string>


    <!-- fragment detail -->

    <string name="d_type">\u0020  Type : </string>
    <string name="d_price">\u0020  Prix : </string>
    <string name="d_surface">\u0020  Surface : </string>
    <string name="d_room">\u0020  Nombre de pièces : </string>
    <string name="d_bed">\u0020 Nombre de chambres : </string>
    <string name="d_bath">\u0020  Nombre de salles de bain : </string>
    <string name="d_location">\u0020  Adresse : </string>
    <string name="d_proximity">\u0020  Proche de : </string>
    <string name="d_date">\u0020 Date de mise en ligne :</string>
    <string name="d_statu">\u0020  Statut : </string>
    <string name="d_agent">\u0020  Agent immobilier : </string>




    <!-- activity research -->

    <string name="r_surface_min">Surface min</string>
    <string name="r_room_min">nb piece min</string>
    <string name="r_surface_max">Surface max</string>
    <string name="r_price_min">Prix Min</string>
    <string name="r_price_max">Prix Max</string>
    <string name="r_room_max">nb piece max</string>
    <string name="r_date_start">Selection de la date de mise en ligne)</string>
    <string name="r_date_selling">Selection de la date de vente (si \'vendu\')</string>
    <string name="r_photo_min">nb photo min</string>
    <string name="r_photo_max">nb photo max</string>
    <string name="r_video_min">nb video min</string>
    <string name="r_video_max">nb video max</string>
    <string name="r_description">Chercher un mot dans la description</string>
    <string name="r_search">Chercher les biens correspondants</string>



</resources>
