<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="10dp"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/spinner_statut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingBottom="12dp"
                android:entries="@array/choice_statut"
                android:textSize="14sp" />

            <Spinner
                android:id="@+id/spinner_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingBottom="12dp"
                android:entries="@array/choice_type"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberSigned"
                android:hint="@string/a_price"/>

            <Spinner
                android:id="@+id/spinner_money"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingBottom="12dp"
                android:entries="@array/choice_money"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/nb_bedroom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberSigned"
                android:hint="@string/a_bed"/>

            <EditText
                android:id="@+id/nb_bathroom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberSigned"
                android:hint="@string/a_bath"/>


            <EditText
                android:id="@+id/surface"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberSigned"
                android:hint="@string/a_surface"/>

            <EditText
                android:id="@+id/nb_piece"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberSigned"
                android:hint="@string/a_room"/>

            <EditText
                android:id="@+id/ville"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/a_ville"/>


            <EditText
                android:id="@+id/adresse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/a_location"/>

            <EditText
                android:id="@+id/agent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/a_agent"/>

            <EditText
                android:id="@+id/proximity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/a_proximity"/>

            <EditText
                android:id="@+id/youtube"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/a_youtube"/>



            <EditText
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/a_description"/>

            <Button
                android:id="@+id/photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a_photo"/>

            <TextView
                android:id="@+id/nb_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a_nb_photo"/>


            <EditText
                android:id="@+id/selling_date"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="#d4d4d4"
                android:hint="@string/a_date"
                android:padding="15dp"
                android:textColor="#897"
                android:textColorHint="#090"
                android:textSize="20sp"
                android:textStyle="bold" />


            <Button
                android:id="@+id/add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a_add_"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
