<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-29dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">


            <Gallery
                android:id="@+id/gallery1"
                android:layout_width="fill_parent"
                android:layout_height="127dp" />

            <ImageView
                android:id="@+id/imageAvatar"
                android:layout_width="215dp"
                android:layout_height="191dp"
                android:layout_gravity="center_horizontal"
                android:background="#cfcfcf"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingRight="10dp"
                android:paddingBottom="5dp" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_pen"
                android:fontFamily="monospace"
                android:gravity="left"
                android:textSize="20dp" />


            <TextView
                android:id="@+id/type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_batiment"
                android:fontFamily="monospace"
                android:gravity="left"
                android:text="@string/d_type"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/money"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_euro"
                android:fontFamily="monospace"
                android:gravity="left"
                android:text="@string/d_price"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/surface"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_surface"
                android:fontFamily="monospace"
                android:gravity="left"
                android:text="@string/d_surface"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_home"
                android:fontFamily="monospace"
                android:gravity="left"
                android:text="@string/d_room"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/bed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_bed"
                android:fontFamily="monospace"
                android:gravity="left"
                android:text="@string/d_bed"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/bath"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_bath"
                android:fontFamily="monospace"
                android:gravity="left"
                android:text="@string/d_bath"
                android:textSize="20dp" />


            <TextView
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_map"
                android:fontFamily="monospace"
                android:gravity="left"
                android:text="@string/d_location"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/interest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_interest"
                android:fontFamily="monospace"
                android:gravity="left"
                android:text="@string/d_proximity"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/start_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_date"
                android:fontFamily="monospace"
                android:gravity="left"
                android:text="@string/d_date"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_sold"
                android:fontFamily="monospace"
                android:gravity="left"
                android:text="@string/d_statu"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/agent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_face"
                android:fontFamily="monospace"
                android:gravity="left"
                android:text="@string/d_agent"
                android:textSize="20dp" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"></androidx.recyclerview.widget.RecyclerView>

            <FrameLayout
                android:id="@+id/content_frame"
                android:layout_width="match_parent"
                android:layout_height="420dp" />

        </LinearLayout>


    </ScrollView>

    <ImageView
        android:id="@+id/sold"
        android:layout_width="76dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_sold_red"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="16dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_modify"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_pen" />




</androidx.constraintlayout.widget.ConstraintLayout>

